# codex-organic-chem

./: .gitignore  .mcp.json  DEPENDENCIES.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.agents/skills/organic-chemistry-assistant/: SKILL.md
.agents/skills/organic-chemistry-assistant/agents/: openai.yaml
integrations/ketcher/: index.html  package-lock.json  package.json
integrations/ketcher/src/: App.jsx  style.css
scripts/: csr_adapter.py  decimer_adapter.py  install_external_tools_macos.sh  molgrapher_adapter.py  molscribe_adapter.py  openchemie_adapter.py
src/codex_organic_chem/: __init__.py  cli.py  external.py  figure_tools.py  image_preprocessing.py  input_review.py  literature.py  mcp_server.py  mechanism.py  mechanism_canvas.py  models.py  ocsr.py  ocsr_adapters.py  rdkit_tools.py  reaction.py  scheme_ocsr.py  service.py  synthesis.py  utils.py
tests/: test_compute.py  test_figure_tools.py  test_normalize.py  test_reaction_mechanism.py
