[project]
name = "codex-organic-chem"
version = "0.1.0"
description = "Local open-source organic chemistry toolchain for Codex: OCSR, structure normalization, drawing, lightweight computation, reaction analysis, and mechanism drafting."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Codex Organic Chemistry Assistant" }]
dependencies = [
  "rdkit>=2024.9.1",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2.0"]
dev = ["pytest>=8.2.0"]

[project.scripts]
codex-chem = "codex_organic_chem.cli:main"
codex-chem-mcp = "codex_organic_chem.mcp_server:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_organic_chem"]

[tool.hatch.build.targets.wheel.shared-data]
".agents/skills/organic-chemistry-assistant" = ".agents/skills/organic-chemistry-assistant"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

